effect and logic added

--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -32,7 +32,7 @@ p {
 }
 
 .main {
-  background-image: url("/assests/landing.png") !important;
+  background-image: url("/assets/landing.png") !important;
   background-size: cover;
   background-repeat: no-repeat;
 }
